# Blog-App

./: .env  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt  todo.md  website.html  website.xml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py
app/: main.py
app/config/: celery_app.py  llm_client.py  security.py  settings.py
bot/: client.py
db/: engine.py  session.py
dependencies/: auth.py  database.py
errors/: exceptions.py  handlers.py
models/: __init__.py  blog_model.py  user_model.py
repositories/app/: blog_repository.py  user_repository.py
repositories/bot/: ai_repository.py  web_scrape_repository.py
routers/: auth_routes.py  blog_routes.py
scheduler/: __init__.py  celery_app.py
scheduler/tasks/: post_ai_blog.py
schemas/: auth_schemas.py  blog_schemas.py  user_schemas.py
services/: auth_service.py  blog_service.py
utils/logging/: logger.py
