[project]
name = "blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "celery>=5.6.3",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]
